# OpenU-C-Project

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  assembler  assembler.c  assembler.h  code.c  code.h  constants.h  first_pass.c  first_pass.h  first_pass_line.c  first_pass_line.h  firstpass.c  firstpass.h  globals.h  input_helpers.c  input_helpers.h  instructions.c  instructions.h  instructions_handler.c  makefile  processfile.c  processfile.h  processline.c  processline.h  rebuildall.sh  recompileall.sh  second_pass.c  second_pass.h  table.c  table.h  utils.c  utils.h  writefiles.c  writefiles.h
.github/workflows/: c.yml
UnitTests/: CMakeLists.txt  UnitTests.c  UnitTests.h  assertions.c  assertions.h  testCode.c  testInstructions.c  testTable.c  testUtils.c
test_files/: 0.as  0.ent  0.ext  0.ob  allvalid.as  allvalid.ob  assembler_errors.as  cmpfiles.sh  errors.as  fpass_errors.as  input.as  input.expected.ext  print.as  print.expected.ent  print.expected.ext  print.expected.ob  reut_errors.as  spass_errors.as
